# overfit-shapes

./: .gitignore  .gitmodules  CMakeLists.txt  Overfit_Neural_Networks_as_a_Compact_Shape_Representation.ipynb  README.md
OverfitShapes/: FileUtilities.py  NeuralImplicit.py  Overfit_Neural_Networks_as_a_Compact_Shape_Representation.ipynb  train.py
Renderer/: CMakeLists.txt  Camera.h  ImageCaster.h  Light.h  Renderer.h  kernel.cu  kernel.cuh
Renderer/example/: main.cpp
SDFSampler/: CMakeLists.txt
SDFSampler/example/: main.cpp
SDFSampler/include/: ExportSemantics.h  MeshReference.h  NormalizeMesh.h
SDFSampler/include/AABB_tree/: AABB_tree.h
SDFSampler/include/IO/: MeshLoader.h
SDFSampler/include/Octree/: Octree.h
SDFSampler/include/SDFSampler/: PointSampler.h
SDFSampler/python/: CMakeLists.txt  MeshLoader.cpp  PointSampler.cpp  python.cpp
SDFSampler/python/example/: example.py
SDFSampler/src/: MeshLoader.cpp  Octree.cpp  PointSampler.cpp
Utilities/: FilesystemSelection.h  FixedPriorityQueue.h  NormalizeMesh.h
example/: CMakeLists.txt  example.py  main.cpp
